Prevent characters overflow

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@
 
 html {
   font-size: 62.5%;
+  height: -webkit-fill-available;
   font-weight: 300;
   font-family: 'Roboto', Helvetica, Arial, sans-serif;
   line-height: 1.4;
@@ -32,10 +33,11 @@ html {
 
 body {
   display: flex;
-  background-image: linear-gradient(236deg, #74ebd5, #acb6e5);
+  background-image: linear-gradient(236deg, #304352, #d7d2cc);
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
 }
 
 /**************/
@@ -54,10 +56,11 @@ body {
   color: var(--grey-050);
   background-color: var(--grey-900);
   text-align: right;
-  padding: 1.8rem 2.2rem;
+  padding: 2.2rem;
 }
 
 .calculator__display__result {
+  font-size: 1.8rem;
   color: var(--grey-300);
 }
 
